# PortableGraphicsToolkit

./: .gitignore  CMakeLists.txt  CMakeSettings.json  COPYING.txt  LICENSE.txt  README.md  TODO.txt
CMakeConfigMgr/: CMakeLists.txt
DiagramTool/: CMakeLists.txt  DiagramTool.vcxproj  DiagramTool.vcxproj.filters
DiagramTool/dll/: DLL_EXPORT.def
DiagramTool/res/images/: Test0.tga
DiagramTool/res/shaders/: Chunk.vert
DiagramTool/src/: .clang-format
DiagramTool/src/dt/: Content.h  DTDEFS.h  Diagram.cpp  Diagram.h  Table.cpp  Table.h  Window.cpp  Window.h  XAxis.cpp  XAxis.h  YAxis.cpp  YAxis.h  lib.cpp
LogicGateSandbox/: .clang-format  CMakeLists.txt
LogicGateSandbox/src/: Button.h  Connection.cpp  Connection.h  GateListViewItem.h  LED.h  NAND.h  NOT.h  Node_legacy.h  Port.cpp  Port.h  Scene.cpp  Scene.h  main.cpp
LogicGateSandbox/src/circuit_logic_components/: Circuit.cpp  Circuit.h  Node.cpp  Node.h  PowerSource.h  node_update_request.h
PortableGraphicsToolkit/: .clang-format  CMakeLists.txt
PortableGraphicsToolkit/src/pgt/: managed_object.h
PortableGraphicsToolkit/src/pgt/game/3d/camera/: Camera.cpp  Camera.h  FPSCameraController.cpp  FPSCameraController.h
PortableGraphicsToolkit/src/pgt/game/3d/collision/: AABB.cpp  AABB.h  Collider.cpp  Collider.h  MovementChecker.h
PortableGraphicsToolkit/src/pgt/graphics/: Color.h  color.cpp  graphics_2d.h  graphics_2d_fwd.h
PortableGraphicsToolkit/src/pgt/graphics/image/: IImage.h  Image.cpp  Image.h  ImageRGBA.cpp  ImageRGBA.h
PortableGraphicsToolkit/src/pgt/graphics/plattform/: target.h
PortableGraphicsToolkit/src/pgt/graphics/plattform/interface/: IFont.h  IFontManager.h  IFramebuffer.h  IRenderer2D.h  IRenderingContext.h  ITexture.h
PortableGraphicsToolkit/src/pgt/graphics/plattform/opengl/: GlDefaultFramebuffer.cpp  GlDefaultFramebuffer.h  GlFramebuffer.cpp  GlFramebuffer.h  GlIndexBuffer.cpp  GlIndexBuffer.h  GlRenderingContext.cpp  GlRenderingContext.h  GlShader.cpp  GlShader.h  GlTexture.cpp  GlTexture.h
PortableGraphicsToolkit/src/pgt/graphics/plattform/opengl/2d/: GlRenderer2D.cpp  GlRenderer2D.h
PortableGraphicsToolkit/src/pgt/graphics/plattform/software/: SwRenderer.h  SwTexture.cpp  SwTexture.h  swrenderer.h
PortableGraphicsToolkit/src/pgt/io/filesystem/: FileSystem.cpp  FileSystem.h
PortableGraphicsToolkit/src/pgt/io/filesystem/plattform/: target.h
PortableGraphicsToolkit/src/pgt/io/istreams/: IStreamReader.h  IStreamWriter.h  istreams.h
PortableGraphicsToolkit/src/pgt/io/logger/: logger.cpp  logger.h
PortableGraphicsToolkit/src/pgt/io/memory_streams/: MemoryStreamReader.h  MemoryStreamWriter.h
PortableGraphicsToolkit/src/pgt/io/vfs/: DynamicMemoryFile.h  IDirectory.h  IFile.h  OSDirectory.cpp  OSDirectory.h  PathForwarder.cpp  PathForwarder.h  StaticMemoryFile.h  VDirectory.cpp  VDirectory.h  VfsFileStreamReader.cpp  VfsFileStreamReader.h  VfsFileStreamWriter.cpp  VfsFileStreamWriter.h  VirtualFileSystem.cpp  VirtualFileSystem.h
PortableGraphicsToolkit/src/pgt/maths/: maths.cpp  maths.h
PortableGraphicsToolkit/src/pgt/maths/mat/: mat3.cpp  mat3.h  mat4.cpp  mat4.h
PortableGraphicsToolkit/src/pgt/maths/random/: SimplexNoise.cpp  SimplexNoise.h
PortableGraphicsToolkit/src/pgt/maths/vec/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
PortableGraphicsToolkit/src/pgt/maths/veci/: vec2i.cpp  vec2i.h  vec3i.cpp  vec3i.h  vec4i.cpp  vec4i.h
PortableGraphicsToolkit/src/pgt/target_settings/: pgt_settings.h  system_settings.h  target_settings.h
PortableGraphicsToolkit/src/pgt/utils/: Randomizer.cpp  Randomizer.h  Stopwatch.cpp  Stopwatch.h  algorithms.h  primitives.h  template_instantiation_helper.h
PortableGraphicsToolkit/src/pgt/utils/containers/: DArray.h  Queue.h
PortableGraphicsToolkit/src/pgt/utils/debug/: MessageBoxes.cpp  MessageBoxes.h
PortableGraphicsToolkit/src/pgt/utils/string/: path_utils.cpp  path_utils.h  string_utf16_back_inserter.h  string_utils.cpp  string_utils.h
PortableGraphicsToolkit/src/pgt/window/: Game2DWindow.h  GameWindow.cpp  GameWindow.h  engine.cpp  engine.h  window.h  window_fwd.h
PortableGraphicsToolkit/src/pgt/window/gui/: Delegate.h  EventComponent.h  EventComponentContainer.h  GuiComponent.h  GuiComponent2D.h  GuiComponent2DContainer.h  GuiComponentContainer.h  GuiLayer.h  GuiWindow.cpp  GuiWindow.h  Rectangle.h  gui.h
PortableGraphicsToolkit/src/pgt/window/gui/controls/: Button.cpp  Button.h  Control.h  ControlContainer.h  DraggableButton.h  DraggableControl.cpp  DraggableControl.h  HorizontalScrollbar.cpp  HorizontalScrollbar.h  ListView.cpp  ListView.h  ListViewItem.cpp  ListViewItem.h  Panel.cpp  Panel.h  RectangularControl.h  VerticalScrollbar.cpp  VerticalScrollbar.h
PortableGraphicsToolkit/src/pgt/window/gui/events/: Delegate.h  Event.h  InputManager.cpp  InputManager.h  KeyDownEvent.h  KeyUpEvent.h  MouseButtonDownEvent.h  MouseButtonUpEvent.h  MouseMoveEvent.h  MouseScrollEvent.h  MoveEvent.h  PGT_KEYS.h  PositionChangedEvent.h  Render2DEvent.h  ResizeEvent.h  events.h  pure_events.h
PortableGraphicsToolkit/src/pgt/window/layers/: Layer.h  Layer2D.h  LayerContainer.h  ParentLayer2D.h  RenderingLayer.h  SubLayer2D.h
PortableGraphicsToolkit/src/pgt/window/plattform/: target.h
PortableGraphicsToolkit/src/pgt/window/plattform/glfw/: CBEngine_Glfw.cpp  CBEngine_Glfw.h  GlfwGlRenderingContext.cpp  GlfwGlRenderingContext.h  GlfwManager.cpp  GlfwManager.h  GlfwWindow.cpp  GlfwWindow.h
PortableGraphicsToolkit/src/pgt/window/plattform/interface/: IApp.h  IWindow.h
PortableGraphicsToolkit/src/pgt/window/plattform/sdl/: SdlApp.cpp  SdlApp.h  SdlGlRenderingContext.cpp  SdlGlRenderingContext.h  SdlWindow.cpp  SdlWindow.h  SdlWindowEventHoudshold.h  sdl_fwd_decls.h  sdl_window_data.h
VoxWorld/: .clang-format  CMakeLists.txt
VoxWorld/res/shaders/: Chunk.frag  basic.frag  basic_legacy.frag  basic_legacy.vert
VoxWorld/src/: main.cpp
VoxWorld/src/game/: VoxelTest.cpp  VoxelTest.h
VoxWorld/src/game/world/: Chunk.cpp  Chunk.h  World.cpp  World.h
VoxWorld/src/gui/: GuiTestWindow.cpp  GuiTestWindow.h
(+58 files in other folders)
